--- a/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/AndroidManifest.xml
+++ b/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <activity android:name="ToDoActivity"
+        <activity android:name=".LectureActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
