--- a/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/build.gradle
+++ b/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 'Google Inc.:Google APIs:21'
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "com.example.zumoappname"
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
@@ -29,6 +29,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.guava:guava:18.0'
+    compile 'com.google.android.gms:play-services-base:6.5.87'
     compile 'com.microsoft.azure:azure-mobile-services-android-sdk:2.0.2-beta+'
     compile (group: 'com.microsoft.azure', name: 'azure-notifications-handler', version: '1.0.1', ext: 'jar')
 }
