--- a/Nikos Tzelvenzis - Azure IaaS/Project/Source/MySQLTestApp/MySQLTestApp.csproj
+++ b/Nikos Tzelvenzis - Azure IaaS/Project/Source/MySQLTestApp/MySQLTestApp.csproj
@@ -158,6 +158,8 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\tze-test-app.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\Chart.js" />
+    <Content Include="Scripts\Chart.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
