--- a/Nikos Tzelvenzis - Azure IaaS/Project/Source/MySQLTestApp/Web.config
+++ b/Nikos Tzelvenzis - Azure IaaS/Project/Source/MySQLTestApp/Web.config
@@ -16,6 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="COMPUTER_STATUS_URL" value="http://192.168.23.2:9000/agent/status"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
