--- a/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/build.gradle
+++ b/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/build.gradle
@@ -27,9 +27,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile(group: 'com.microsoft.azure', name: 'azure-notifications-handler', version: '1.0.1', ext: 'jar')
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.android.gms:play-services-base:6.5.87'
     compile 'com.microsoft.azure:azure-mobile-services-android-sdk:2.0.2-beta+'
-    compile (group: 'com.microsoft.azure', name: 'azure-notifications-handler', version: '1.0.1', ext: 'jar')
+    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'com.android.support:appcompat-v7:22.0.0'
 }
